syntax = "proto3";
package mmap;

service Offset {
    rpc GetOffsets (OffsetsRequest) returns (OffsetsResponse);
}

message OffsetsRequest {
    string ntdll_hash = 1;
}

message OffsetsResponse {
    uint32 LdrpHashTable = 1;
    uint32 LdrpModuleDatatableLock = 2; 
    uint32 LdrpHandleTlsData = 3;
    uint32 LdrpReleaseTlsEntry = 4;
    uint32 LdrpMappingInfoIndex = 5;
    uint32 LdrpModuleBaseAddressIndex = 6;
    uint32 RtlInitializeHistoryTable = 7;
}
